--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 17:05:20 2018</p>
+         Last Run: Mon Jul 16 18:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>06:00 PM</td>
-                        <td>Clear</td>
-                        <td>30</td>
-                        <td>30</td>
-                        <td>0</td>
-                        <td>18</td>
-                        <td>2</td>
-                        <td>13</td>
-                        <td>SE</td>
-                        <td>10</td>
-                     </tr>
-                     <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>21</td>
+                        <td>20</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>SE</td>
-                        <td>7</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -58,11 +46,11 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>25</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ESE</td>
-                        <td>6</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -95,7 +83,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "06:00 PM",
              "07:00 PM",
              "08:00 PM"
            ],
@@ -106,7 +93,6 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "30",
                  "29",
                  "27"
                ]
@@ -117,7 +103,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "30",
                  "29",
                  "27"
                ]
@@ -160,7 +145,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "06:00 PM",
              "07:00 PM",
              "08:00 PM"
            ],
@@ -171,7 +155,6 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -180,9 +163,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "18",
-                 "21",
-                 "26"
+                 "20",
+                 "25"
                ]
              },
              {
@@ -190,9 +172,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "10",
-                 "7",
-                 "6"
+                 "9",
+                 "8"
                ]
              }
            ]
@@ -210,7 +191,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 17:05:20 2018</p>
+         Last Run: Mon Jul 16 18:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -239,7 +220,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>45</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -251,19 +232,19 @@
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>32</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>4</td>
-                        <td>42</td>
+                        <td>26</td>
+                        <td>26</td>
+                        <td>2</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>45</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -309,7 +290,7 @@
                "data":[
                  "29",
                  "28",
-                 "25"
+                 "26"
                ]
              },
              {
@@ -320,7 +301,7 @@
                "data":[
                  "29",
                  "28",
-                 "25"
+                 "26"
                ]
              }
            ]
@@ -373,7 +354,7 @@
                "data":[
                  "4",
                  "2",
-                 "4"
+                 "2"
                ]
              },
              {
@@ -383,7 +364,7 @@
                "data":[
                  "30",
                  "34",
-                 "42"
+                 "41"
                ]
              },
              {
@@ -391,9 +372,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "45",
-                 "32",
-                 "45"
+                 "47",
+                 "39",
+                 "39"
                ]
              }
            ]
@@ -410,7 +391,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 17:05:20 2018</p>
+         Last Run: Mon Jul 16 18:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -435,21 +416,21 @@
                         <td>21</td>
                         <td>21</td>
                         <td>46</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>3</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SE</td>
-                        <td>56</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>43</td>
                         <td>55</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SE</td>
                         <td>51</td>
                      </tr>
@@ -461,7 +442,7 @@
                         <td>45</td>
                         <td>58</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
                         <td>56</td>
                      </tr>
@@ -470,7 +451,7 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>37</td>
+                        <td>42</td>
                         <td>60</td>
                         <td>0</td>
                         <td>13</td>
@@ -521,7 +502,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "22",
+                 "21",
                  "21",
                  "20"
                ]
@@ -533,7 +514,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "22",
+                 "21",
                  "21",
                  "20"
                ]
@@ -590,7 +571,7 @@
                  "46",
                  "43",
                  "45",
-                 "37"
+                 "42"
                ]
              },
              {
@@ -598,7 +579,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
+                 "55",
                  "55",
                  "58",
                  "60"
@@ -609,7 +590,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
+                 "57",
                  "51",
                  "56",
                  "55"
@@ -629,7 +610,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 17:05:20 2018</p>
+         Last Run: Mon Jul 16 18:05:10 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -651,14 +632,14 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>13</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>5</td>
                         <td>63</td>
                         <td>3</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WNW</td>
-                        <td>20</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -669,44 +650,44 @@
                         <td>55</td>
                         <td>4</td>
                         <td>11</td>
-                        <td>NW</td>
-                        <td>22</td>
+                        <td>WNW</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>15</td>
-                        <td>49</td>
+                        <td>40</td>
+                        <td>48</td>
                         <td>6</td>
                         <td>11</td>
                         <td>NW</td>
-                        <td>24</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>24</td>
-                        <td>44</td>
-                        <td>6</td>
-                        <td>11</td>
-                        <td>NW</td>
-                        <td>55</td>
+                        <td>45</td>
+                        <td>43</td>
+                        <td>7</td>
+                        <td>10</td>
+                        <td>WNW</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>31</td>
-                        <td>42</td>
-                        <td>6</td>
+                        <td>49</td>
+                        <td>41</td>
+                        <td>7</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>55</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -752,7 +733,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "15",
+                 "16",
                  "17",
                  "18",
                  "19",
@@ -765,7 +746,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "15",
+                 "16",
                  "17",
                  "18",
                  "19",
@@ -822,11 +803,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
+                 "5",
                  "15",
-                 "15",
-                 "24",
-                 "31"
+                 "40",
+                 "45",
+                 "49"
                ]
              },
              {
@@ -836,9 +817,9 @@
                "data":[
                  "63",
                  "55",
-                 "49",
-                 "44",
-                 "42"
+                 "48",
+                 "43",
+                 "41"
                ]
              },
              {
@@ -846,11 +827,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "20",
-                 "22",
-                 "24",
-                 "55",
-                 "55"
+                 "18",
+                 "19",
+                 "50",
+                 "50",
+                 "50"
                ]
              }
            ]
