--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 18:05:10 2018</p>
+         Last Run: Mon Jul 16 19:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>07:00 PM</td>
-                        <td>Clear</td>
-                        <td>29</td>
-                        <td>29</td>
-                        <td>0</td>
-                        <td>20</td>
-                        <td>1</td>
-                        <td>16</td>
-                        <td>SE</td>
-                        <td>9</td>
-                     </tr>
-                     <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
-                        <td>25</td>
+                        <td>23</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>ESE</td>
-                        <td>8</td>
+                        <td>SE</td>
+                        <td>4</td>
                      </tr>
                   </tbody>
                </table>
@@ -83,7 +71,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
              "08:00 PM"
            ],
            "datasets":[
@@ -93,8 +80,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "29",
-                 "27"
+                 "28"
                ]
              },
              {
@@ -103,8 +89,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "29",
-                 "27"
+                 "28"
                ]
              }
            ]
@@ -145,7 +130,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
              "08:00 PM"
            ],
            "datasets":[
@@ -154,7 +138,6 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
                  "0"
                ]
              },
@@ -163,8 +146,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "20",
-                 "25"
+                 "23"
                ]
              },
              {
@@ -172,8 +154,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "9",
-                 "8"
+                 "4"
                ]
              }
            ]
@@ -191,7 +172,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 18:05:10 2018</p>
+         Last Run: Mon Jul 16 19:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -220,31 +201,31 @@
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>47</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>28</td>
                         <td>28</td>
-                        <td>2</td>
+                        <td>3</td>
                         <td>34</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>39</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>41</td>
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>39</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -353,8 +334,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "2",
-                 "2"
+                 "3",
+                 "1"
                ]
              },
              {
@@ -372,9 +353,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "39",
-                 "39"
+                 "52",
+                 "45",
+                 "40"
                ]
              }
            ]
@@ -391,7 +372,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 18:05:10 2018</p>
+         Last Run: Mon Jul 16 19:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -412,51 +393,51 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>46</td>
-                        <td>55</td>
+                        <td>70</td>
+                        <td>54</td>
                         <td>3</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SE</td>
-                        <td>57</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>43</td>
+                        <td>49</td>
                         <td>55</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>51</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>45</td>
-                        <td>58</td>
+                        <td>20</td>
+                        <td>59</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>56</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>42</td>
-                        <td>60</td>
+                        <td>22</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>55</td>
+                        <td>E</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -568,10 +549,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "46",
-                 "43",
-                 "45",
-                 "42"
+                 "70",
+                 "49",
+                 "20",
+                 "22"
                ]
              },
              {
@@ -579,10 +560,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "54",
                  "55",
-                 "55",
-                 "58",
-                 "60"
+                 "59",
+                 "62"
                ]
              },
              {
@@ -590,10 +571,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
-                 "51",
-                 "56",
-                 "55"
+                 "75",
+                 "59",
+                 "59",
+                 "58"
                ]
              }
            ]
@@ -610,7 +591,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 18:05:10 2018</p>
+         Last Run: Mon Jul 16 19:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
