--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 20:05:22 2018</p>
+         Last Run: Mon Jul 16 21:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>29</td>
                         <td>29</td>
                         <td>4</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>54</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -48,9 +48,9 @@
                         <td>2</td>
                         <td>34</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>E</td>
-                        <td>47</td>
+                        <td>11</td>
+                        <td>ESE</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>3</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
-                        <td>44</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
+                 "29",
                  "34",
-                 "42"
+                 "41"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "54",
-                 "47",
-                 "44"
+                 "49",
+                 "51",
+                 "41"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 20:05:22 2018</p>
+         Last Run: Mon Jul 16 21:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -428,7 +428,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 20:05:22 2018</p>
+         Last Run: Mon Jul 16 21:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
