--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 22:05:04 2018</p>
+         Last Run: Mon Jul 16 23:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Partly Cloudy</td>
                         <td>29</td>
                         <td>29</td>
-                        <td>4</td>
-                        <td>29</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>30</td>
+                        <td>1</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>50</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>28</td>
                         <td>28</td>
-                        <td>3</td>
-                        <td>33</td>
+                        <td>0</td>
+                        <td>34</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>46</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -61,8 +61,8 @@
                         <td>40</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>ENE</td>
-                        <td>40</td>
+                        <td>E</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,8 +170,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "3",
+                 "1",
+                 "0",
                  "0"
                ]
              },
@@ -180,8 +180,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "29",
-                 "33",
+                 "30",
+                 "34",
                  "40"
                ]
              },
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "46",
-                 "40"
+                 "54",
+                 "48",
+                 "41"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 22:05:04 2018</p>
+         Last Run: Mon Jul 16 23:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -233,43 +233,43 @@
                         <td>Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>54</td>
                         <td>3</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
                         <td>75</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>47</td>
                         <td>54</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
                         <td>22</td>
-                        <td>59</td>
+                        <td>58</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ESE</td>
-                        <td>59</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>24</td>
+                        <td>16</td>
                         <td>62</td>
                         <td>0</td>
                         <td>13</td>
@@ -320,7 +320,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "21",
+                 "22",
                  "21",
                  "20"
                ]
@@ -332,7 +332,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "21",
+                 "22",
                  "21",
                  "20"
                ]
@@ -386,10 +386,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "68",
+                 "69",
                  "47",
                  "22",
-                 "24"
+                 "16"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "54",
                  "54",
-                 "59",
+                 "58",
                  "62"
                ]
              },
@@ -409,8 +409,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "75",
-                 "56",
-                 "59",
+                 "55",
+                 "71",
                  "58"
                ]
              }
@@ -428,7 +428,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 22:05:04 2018</p>
+         Last Run: Mon Jul 16 23:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
