--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 23:05:04 2018</p>
+         Last Run: Tue Jul 17 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -36,9 +36,9 @@
                         <td>1</td>
                         <td>30</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>E</td>
-                        <td>54</td>
+                        <td>13</td>
+                        <td>ESE</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -46,22 +46,22 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>E</td>
-                        <td>48</td>
+                        <td>ESE</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>0</td>
                         <td>40</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>E</td>
+                        <td>ENE</td>
                         <td>41</td>
                      </tr>
                   </tbody>
@@ -108,7 +108,7 @@
                "data":[
                  "29",
                  "28",
-                 "26"
+                 "25"
                ]
              },
              {
@@ -119,7 +119,7 @@
                "data":[
                  "29",
                  "28",
-                 "26"
+                 "25"
                ]
              }
            ]
@@ -181,7 +181,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "30",
-                 "34",
+                 "35",
                  "40"
                ]
              },
@@ -190,8 +190,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "56",
                  "54",
-                 "48",
                  "41"
                ]
              }
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 23:05:04 2018</p>
+         Last Run: Tue Jul 17 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -233,8 +233,8 @@
                         <td>Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>69</td>
-                        <td>54</td>
+                        <td>70</td>
+                        <td>55</td>
                         <td>3</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -243,26 +243,26 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>47</td>
-                        <td>54</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>45</td>
+                        <td>56</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
-                        <td>55</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>22</td>
-                        <td>58</td>
+                        <td>44</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>71</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -270,7 +270,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>16</td>
-                        <td>62</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
@@ -320,7 +320,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
-                 "22",
+                 "21",
                  "21",
                  "20"
                ]
@@ -332,7 +332,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
-                 "22",
+                 "21",
                  "21",
                  "20"
                ]
@@ -386,9 +386,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "69",
-                 "47",
-                 "22",
+                 "70",
+                 "45",
+                 "44",
                  "16"
                ]
              },
@@ -397,10 +397,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "54",
-                 "58",
-                 "62"
+                 "55",
+                 "56",
+                 "60",
+                 "63"
                ]
              },
              {
@@ -409,8 +409,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "75",
-                 "55",
-                 "71",
+                 "56",
+                 "59",
                  "58"
                ]
              }
@@ -428,7 +428,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 23:05:04 2018</p>
+         Last Run: Tue Jul 17 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -450,49 +450,49 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>16</td>
-                        <td>16</td>
+                        <td>15</td>
+                        <td>15</td>
                         <td>5</td>
-                        <td>63</td>
+                        <td>66</td>
                         <td>3</td>
                         <td>11</td>
-                        <td>WNW</td>
-                        <td>18</td>
+                        <td>NW</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>15</td>
-                        <td>55</td>
+                        <td>5</td>
+                        <td>59</td>
                         <td>4</td>
                         <td>11</td>
-                        <td>WNW</td>
+                        <td>NW</td>
                         <td>19</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Clear</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>40</td>
-                        <td>48</td>
+                        <td>9</td>
+                        <td>52</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NW</td>
-                        <td>50</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>45</td>
-                        <td>43</td>
+                        <td>54</td>
+                        <td>47</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>WNW</td>
+                        <td>NW</td>
                         <td>50</td>
                      </tr>
                      <tr>
@@ -500,11 +500,11 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>49</td>
-                        <td>41</td>
+                        <td>55</td>
+                        <td>48</td>
                         <td>7</td>
                         <td>11</td>
-                        <td>WNW</td>
+                        <td>NW</td>
                         <td>50</td>
                      </tr>
                   </tbody>
@@ -551,7 +551,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "16",
+                 "15",
                  "17",
                  "18",
                  "19",
@@ -564,7 +564,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "16",
+                 "15",
                  "17",
                  "18",
                  "19",
@@ -622,10 +622,10 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "15",
-                 "40",
-                 "45",
-                 "49"
+                 "5",
+                 "9",
+                 "54",
+                 "55"
                ]
              },
              {
@@ -633,11 +633,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
-                 "55",
-                 "48",
-                 "43",
-                 "41"
+                 "66",
+                 "59",
+                 "52",
+                 "47",
+                 "48"
                ]
              },
              {
@@ -645,9 +645,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "18",
                  "19",
-                 "50",
+                 "19",
+                 "19",
                  "50",
                  "50"
                ]
