--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 15:05:03 2018</p>
+         Last Run: Tue Jul 17 16:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>29</td>
-                        <td>29</td>
+                        <td>30</td>
+                        <td>30</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>26</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>60</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>29</td>
                         <td>29</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>32</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>64</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>2</td>
-                        <td>39</td>
+                        <td>1</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>59</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -106,7 +106,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "29",
+                 "30",
                  "29",
                  "26"
                ]
@@ -117,7 +117,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "29",
+                 "30",
                  "29",
                  "26"
                ]
@@ -171,8 +171,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
-                 "2"
+                 "1",
+                 "1"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "28",
+                 "26",
                  "32",
-                 "39"
+                 "40"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "62",
                  "60",
-                 "64",
-                 "59"
+                 "66"
                ]
              }
            ]
@@ -210,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 15:05:03 2018</p>
+         Last Run: Tue Jul 17 16:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -231,27 +231,27 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>83</td>
-                        <td>54</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>59</td>
+                        <td>53</td>
                         <td>3</td>
-                        <td>11</td>
-                        <td>SE</td>
-                        <td>75</td>
+                        <td>13</td>
+                        <td>ESE</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>55</td>
                         <td>55</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -261,9 +261,9 @@
                         <td>55</td>
                         <td>57</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>ESE</td>
-                        <td>74</td>
+                        <td>14</td>
+                        <td>E</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -275,7 +275,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>70</td>
+                        <td>83</td>
                      </tr>
                   </tbody>
                </table>
@@ -320,8 +320,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
-                 "21",
+                 "22",
+                 "22",
                  "21",
                  "20"
                ]
@@ -332,8 +332,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
-                 "21",
+                 "22",
+                 "22",
                  "21",
                  "20"
                ]
@@ -387,7 +387,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "83",
+                 "59",
                  "55",
                  "55",
                  "55"
@@ -398,7 +398,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
+                 "53",
                  "55",
                  "57",
                  "59"
@@ -409,10 +409,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
-                 "65",
-                 "74",
-                 "70"
+                 "66",
+                 "66",
+                 "79",
+                 "83"
                ]
              }
            ]
@@ -429,7 +429,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 15:05:03 2018</p>
+         Last Run: Tue Jul 17 16:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
